Pictures new approach

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -9,3 +9,7 @@ canvas
 .sidebar__logo__container__panel button
    width: 45px
 
+.sidebar__pictures__container__picture
+  height: 60px
+  width: 60px
+
