pictures in left sidebar

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -4,7 +4,7 @@ canvas
 
 .sidebar__logo__container
   height: 60px
-  max-width: 100%
+  width: 60px
 
 .sidebar__logo__container__panel button
    width: 45px
@@ -13,3 +13,18 @@ canvas
   height: 60px
   width: 60px
 
+.sidebar__pictures__container__frame
+  height: 60px
+  width: 60px
+
+.sidebar__pictures__container__image
+  height: 60px
+  width: 60px
+
+.sidebar__pictures__container__panel
+  position: absolute
+  bottom: 0
+
+.sidebar__pictures__container__panel__editBtn,
+.sidebar__pictures__container__panel__deleteBtn
+  width: 45px
