picture on workspace

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -23,6 +23,7 @@ canvas
 
 .sidebar__pictures__container__panel
   position: absolute
+  display: flex
   bottom: 0
 
 .sidebar__pictures__container__panel__editBtn,
