workspace display adjustment

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1,6 +1,6 @@
 canvas
   width: 100%
-  height: auto
+  height: 100%
 
 .sidebar__logo__container
   height: 60px
@@ -29,3 +29,8 @@ canvas
 .sidebar__pictures__container__panel__editBtn,
 .sidebar__pictures__container__panel__deleteBtn
   width: 45px
+
+.workspace-logo
+  position: absolute
+  top: 0
+  left: 0
