--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1,6 +1,6 @@
 canvas
   width: 100%
-  height: 100%
+  height: 50vh
 
 .sidebar__logo__container
   height: 60px
@@ -30,7 +30,9 @@ canvas
 .sidebar__pictures__container__panel__deleteBtn
   width: 45px
 
-.workspace-logo
-  position: absolute
-  top: 0
-  left: 0
+.work-space__sheet
+  display: grid
+  height: 65vh
+
+  .workspace-image, .workspace-logo
+    grid-area: 1/1
